--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,8 +1,8 @@
-version: 0.0.2
+version: 0.0.3
 jobId: "361"
 jobName: Test_manifest_pyspark_Mansi
 jobType: Source Aligned Data Product
-alias: write_to_csv
+alias: write_csv
 discoveryPort:
   name: Test_manifest_pyspark_Mansi
 inputPorts:
@@ -19,31 +19,30 @@ inputPorts:
       dataSetUrn: urn:dv:dataset:3a0494b4-86e9-430f-afcb-877a0d9bea95
     type: inputDelimited
 productState:
-  persistDataFrame: false
-  enableDataReconciliation: false
-  enforceSchema: false
-  stepName: write_to_csv
-  path: s3://byte-etl-externaldemo/custom_pyspark_output/weather_data_daily_test.csv
-  type: inputDelimited
-  isStateManagement: true
-  sequence: 3
-  alias: write_to_csv
-  refreshInterval: None
+  isDynamic: true
+  alias: write_csv
   retentionVersions: ""
   logicalSchema: ""
-  enforceSchemaMethod: ""
+  stateStoreType: writeDataFrameToCsv
   isProfilingEnabled: false
+  partitionFiles: 1
+  path: s3://byte-etl-externaldemo/custom_pyspark_output/weather_data_daily_test.csv
+  optional:
+    persistDataFrame: false
+    advanceOptions:
+      header: true
+    addRunIdColumn: false
+    enableDataReconciliation: false
+    enforceSchema: false
+  refreshInterval: None
 transformation:
-  - alias: EMR_PySpark_1
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
-    optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-    type: customPySparkEMRServerless
-    sequence: 2
+  - alias: Spark_SQL_1
+    type: SQL
+    description: sql
+    query: select city from data
+    sequenceNo: 2
     references:
-      - alias: ""
+      - alias: weather_day_1
         sqlReference: ""
 controlPort:
   dataQualityRules: {}
