--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,46 +1,54 @@
-version: 0.0.3
-jobId: "355"
-jobName: Test_iceberg_jdbc_load_Mansi
+version: 0.0.1
+jobId: "376"
+jobName: pyspark_extra_params_Mansi_again
 jobType: Source Aligned Data Product
-domain: finance
-alias: Write_iceberg
+alias: write_del
 discoveryPort:
-  name: Test_iceberg_jdbc_load_Mansi
+  name: pyspark_extra_params_Mansi_again
 inputPorts:
-  - alias: read_csv_for_iceberg_jdbc_1
+  - alias: weather_day_1
     isDynamic: true
-    path: /data/tmp/input_data/incr_1.csv
+    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: Base S3 Connectivity
-      dataSetUrn: urn:dv:dataset:06e2803b-c803-4bd8-8f01-226203ad77a3
+      connection: S3 with User
+      dataSetUrn: urn:dv:dataset:3a0494b4-86e9-430f-afcb-877a0d9bea95
     type: inputDelimited
 productState:
-  isDynamic: true
-  alias: Write_iceberg
-  retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
-  stateStoreType: loadDataIceberg
-  isProfilingEnabled: false
-  updateStrategy: Overwrite
-  tableName: iceberg_db.data_1
-  warehousePath: /data/tmp/iceberg_warehouse/
-  catalogName: my_catalog
-  optional:
-    persistDataFrame: false
-    enableDataReconciliation: false
-    enforceSchema: true
-    enforceSchemaMethod: Warning
-    catalogType: postgres
+  persistDataFrame: false
+  enableDataReconciliation: false
+  enforceSchema: false
+  stepName: write del
+  path: s3://byte-etl-externaldemo/custom_pyspark_output/weather_data_daily_test.csv
+  type: inputDelimited
+  isStateManagement: true
+  sequence: 3
+  alias: write_del
   refreshInterval: None
-transformation: []
+  retentionVersions: ""
+  logicalSchema: ""
+  enforceSchemaMethod: ""
+  isProfilingEnabled: false
+transformation:
+  - isDynamic: true
+    alias: EMR_PySpark_1
+    description: Pyspark Job
+    sequence: 2
+    arguments:
+      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
+    inputDataFrameList:
+      - inputDataFrame: ""
+        tempViewName: ""
+    optional:
+      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
+      sparkExtraConf:
+        spark.sql.legacy.timeParserPolicy: LEGACY
+    type: customPySparkEMRServerless
 controlPort:
   dataQualityRules: {}
 outputPort:
