--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,14 +1,15 @@
-version: 0.0.1
-jobId: "375"
-jobName: Test_read_csv_write_iceberg_AWS_Mansi
+version: 0.0.4
+jobId: "355"
+jobName: Test_iceberg_jdbc_load_Mansi
 jobType: Source Aligned Data Product
-alias: ice
+domain: finance
+alias: Write_iceberg
 discoveryPort:
-  name: Test_read_csv_write_iceberg_AWS_Mansi
+  name: Test_iceberg_jdbc_load_Mansi
 inputPorts:
-  - alias: Parquet_Mansi_s3_1
+  - alias: weather_data_Mansi_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/
+    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
     optional:
       persistDataFrame: false
       advanceOptions:
@@ -16,30 +17,38 @@ inputPorts:
       enableDataReconciliation: false
       enforceSchema: false
       connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:b3deed73-c9c2-49ca-8323-ce16426fe4ba
+      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
     type: inputDelimited
 productState:
   isDynamic: true
-  alias: ice
+  alias: Write_iceberg
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
+  logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
   updateStrategy: Overwrite
-  tableName: s3source.demotable
-  warehousePath: s3://bp-spark-sql-library-test-acc/
-  catalogName: glue
+  tableName: iceberg_db.data_1
+  warehousePath: /data/tmp/iceberg_warehouse/
+  catalogName: my_catalog
   optional:
     persistDataFrame: false
     enableDataReconciliation: false
     enforceSchema: true
     enforceSchemaMethod: Warning
-    catalogType: glue
+    catalogType: postgres
   refreshInterval: None
-transformation: []
+transformation:
+  - isDynamic: true
+    alias: Spark_SQL_1
+    description: ssre
+    sequence: 2
+    inputDataFrameList:
+      - inputDataFrame: weather_data_Mansi_1
+        tempViewName: temp
+    query: select * from temp
+    optional:
+      persistDataFrame: false
+    type: operationThroughSqlQuery
 controlPort:
   dataQualityRules: {}
 outputPort:
