--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,11 +1,11 @@
-version: 0.0.3
-jobId: "379"
-jobName: Test_iceberg_jdbc_load_SCD2_Mansi
+version: 0.0.1
+jobId: "380"
+jobName: Test_load_iceberg_jdbc_SCD2_Mansi
 jobType: Source Aligned Data Product
 domain: finance
-alias: write_in_iceberg1
+alias: Write_iceberg
 discoveryPort:
-  name: Test_iceberg_jdbc_load_SCD2_Mansi
+  name: Test_load_iceberg_jdbc_SCD2_Mansi
 inputPorts:
   - alias: read_csv_onprim_with_s3_conn_vishnu_1
     isDynamic: true
@@ -21,12 +21,9 @@ inputPorts:
     type: inputDelimited
 productState:
   isDynamic: true
-  alias: write_in_iceberg
+  alias: Write_iceberg
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
+  logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
   updateStrategy: SCD2
@@ -37,7 +34,7 @@ productState:
     changeTrackColumns:
       - - value
     timeTrackColumn: modified2
-  tableName: iceberg_meta.scd2_data
+  tableName: iceberg_db.scd2_data
   warehousePath: /data/tmp/iceberg_warehouse/
   catalogName: my_catalog
   optional:
