--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,11 +1,11 @@
 version: 0.0.1
-jobId: "380"
-jobName: Test_load_iceberg_jdbc_SCD2_Mansi
+jobId: "381"
+jobName: Test_load_iceberg_jdbc_SCD1_Mansi
 jobType: Source Aligned Data Product
 domain: finance
-alias: Write_iceberg1
+alias: write_in_iceberg
 discoveryPort:
-  name: Test_load_iceberg_jdbc_SCD2_Mansi
+  name: Test_load_iceberg_jdbc_SCD1_Mansi
 inputPorts:
   - alias: read_csv_onprim_with_s3_conn_vishnu_1
     isDynamic: true
@@ -21,16 +21,13 @@ inputPorts:
     type: inputDelimited
 productState:
   isDynamic: true
-  alias: Write_iceberg1
+  alias: write_in_iceberg
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
+  logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
-  updateStrategy: SCD2
-  tableName: iceberg_db.scd2_data
+  updateStrategy: SCD1
+  tableName: iceberg_meta.scd1_data
   warehousePath: /data/tmp/iceberg_warehouse/
   catalogName: my_catalog
   optional:
