--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,58 +1,66 @@
-version: 0.0.3
-jobId: "376"
-jobName: pyspark_extra_params_Mansi_again
+version: 0.0.6
+jobId: "380"
+jobName: Test_load_iceberg_jdbc_SCD2_Mansi
 jobType: Source Aligned Data Product
-domain: sale
-alias: write_del
+domain: finance
+alias: Write_iceberg
 discoveryPort:
-  name: pyspark_extra_params_Mansi_again
+  name: Test_load_iceberg_jdbc_SCD2_Mansi
 inputPorts:
-  - alias: weather_data_Mansi_1
+  - alias: read_csv_onprim_with_s3_conn_vishnu_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    path: /data/tmp/input_data/incr_1.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
+      connection: on_prim_testing_conn_s3_vishnu
+      dataSetUrn: urn:dv:dataset:fe039567-7e6b-4921-a55e-166965027888
     type: inputDelimited
 productState:
-  persistDataFrame: false
-  enableDataReconciliation: false
-  enforceSchema: false
-  stepName: write del
-  path: s3://byte-etl-externaldemo/custom_pyspark_output/weather_data_daily_test.csv
-  type: inputDelimited
-  isStateManagement: true
-  sequence: 3
-  alias: write_del
-  refreshInterval: None
+  isDynamic: true
+  alias: Write_iceberg
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
-  enforceSchemaMethod: ""
+  logicalSchema: ""
+  stateStoreType: loadDataIceberg
   isProfilingEnabled: false
+  updateStrategy: SCD2
+  updateStrategyOptions:
+    entityRef: ""
+    uniqueKeyColumns:
+      - - id
+    changeTrackColumns:
+      - - value
+    timeTrackColumn: modified2
+  tableName: iceberg_db2.scd2_data2
+  warehousePath: /data/tmp/iceberg_warehouse/
+  catalogName: my_catalog
+  optional:
+    persistDataFrame: false
+    enableDataReconciliation: false
+    enforceSchema: false
+    enforceSchemaMethod: Warning
+    catalogType: postgres
+    changeTrackingColumns:
+      - value
+    timestampColumn: modified2
+    primaryKey:
+      - id
+  refreshInterval: None
 transformation:
   - isDynamic: true
-    alias: EMR_PySpark_1
-    description: Pyspark Job
+    alias: Spark_SQL_1
+    description: read_csv_using_spark_sql
     sequence: 2
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
     inputDataFrameList:
-      - inputDataFrame: ""
-        tempViewName: ""
+      - inputDataFrame: read_csv_onprim_with_s3_conn_vishnu_1
+        tempViewName: Temp
+    query: SELECT *,cast(modified AS date) as modified2 FROM Temp;
     optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-      sparkExtraConf:
-        spark.sql.legacy.timeParserPolicy: LEGACY
-    type: customPySparkEMRServerless
+      persistDataFrame: false
+    type: operationThroughSqlQuery
 controlPort:
   dataQualityRules: {}
 outputPort:
