--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,11 +1,11 @@
-version: 0.0.6
-jobId: "380"
-jobName: Test_load_iceberg_jdbc_SCD2_Mansi
+version: 0.0.2
+jobId: "381"
+jobName: Test_load_iceberg_jdbc_SCD1_Mansi
 jobType: Source Aligned Data Product
 domain: finance
-alias: Write_iceberg
+alias: write_in_iceberg
 discoveryPort:
-  name: Test_load_iceberg_jdbc_SCD2_Mansi
+  name: Test_load_iceberg_jdbc_SCD1_Mansi
 inputPorts:
   - alias: read_csv_onprim_with_s3_conn_vishnu_1
     isDynamic: true
@@ -21,20 +21,13 @@ inputPorts:
     type: inputDelimited
 productState:
   isDynamic: true
-  alias: Write_iceberg
+  alias: write_in_iceberg
   retentionVersions: ""
   logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
-  updateStrategy: SCD2
-  updateStrategyOptions:
-    entityRef: ""
-    uniqueKeyColumns:
-      - - id
-    changeTrackColumns:
-      - - value
-    timeTrackColumn: modified2
-  tableName: iceberg_db2.scd2_data2
+  updateStrategy: SCD1
+  tableName: iceberg_meta.scd1_data
   warehousePath: /data/tmp/iceberg_warehouse/
   catalogName: my_catalog
   optional:
@@ -44,10 +37,10 @@ productState:
     enforceSchemaMethod: Warning
     catalogType: postgres
     changeTrackingColumns:
-      - value
+      - value,name
     timestampColumn: modified2
     primaryKey:
-      - id
+      - id,name
   refreshInterval: None
 transformation:
   - isDynamic: true
