--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,11 +1,10 @@
-version: 0.0.6
-jobId: "392"
-jobName: Test_iceberg_biglake_load_Mansi
+version: 0.0.1
+jobId: "395"
+jobName: Test_iceberg_biglake_SCD2_Mansi
 jobType: Source Aligned Data Product
-domain: operation
-alias: write_iceberg
+alias: loadIce
 discoveryPort:
-  name: Test_iceberg_biglake_load_Mansi
+  name: Test_iceberg_biglake_SCD2_Mansi
 inputPorts:
   - alias: gcp_read_csv_Mansi_1
     isDynamic: true
@@ -21,34 +20,43 @@ inputPorts:
     type: inputDelimited
 productState:
   isDynamic: true
-  alias: write_iceberg
+  alias: loadIce
   retentionVersions: ""
-  logicalSchema:
-    properties:
-      City: STRING
-      Region: STRING
+  logicalSchema: ""
   stateStoreType: loadDataIceberg
   isProfilingEnabled: false
-  updateStrategy: Overwrite
-  tableName: iceberg_db.data_2_1
+  updateStrategy: SCD2
+  updateStrategyOptions:
+    entityRef: ""
+    uniqueKeyColumns:
+      - - id
+    changeTrackColumns:
+      - - value
+    timeTrackColumn: modified2
+  tableName: iceberg_db.scd2_data_2_1
   warehousePath: gs://dabur_poc_inutdata/iceberg_warehouse/
-  catalogName: random_catalog
+  catalogName: any
   optional:
     persistDataFrame: false
     enableDataReconciliation: false
     enforceSchema: false
     enforceSchemaMethod: Warning
     catalogType: biglake
+    changeTrackingColumns:
+      - value
+    timestampColumn: modified2
+    primaryKey:
+      - id
   refreshInterval: None
 transformation:
   - isDynamic: true
     alias: Spark_SQL_1
-    description: simple_select
+    description: str_to_date
     sequence: 2
     inputDataFrameList:
       - inputDataFrame: gcp_read_csv_Mansi_1
-        tempViewName: tmp
-    query: select * from tmp
+        tempViewName: temp
+    query: SELECT *,cast(modified AS date) as modified2 FROM temp;
     optional:
       persistDataFrame: false
     type: operationThroughSqlQuery
