--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,62 +1,62 @@
-version: 0.0.2
-jobId: "394"
-jobName: Test_iceberg_biglake_SCD1_Mansi
+version: 0.0.1
+jobId: "398"
+jobName: Test_sample_data_state_mngt_Mansi
 jobType: Source Aligned Data Product
-domain: operation
-alias: Write_ice
+domain: sale
+alias: read
 discoveryPort:
-  name: Test_iceberg_biglake_SCD1_Mansi
+  name: Test_sample_data_state_mngt_Mansi
 inputPorts:
-  - alias: gcp_read_csv_Mansi_1
+  - alias: daily_weather
     isDynamic: true
-    path: gs://dabur_poc_inutdata/scd1_testing_csv/incr_1.csv
+    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: mansi_gcp_dummy
-      dataSetUrn: urn:dv:dataset:7dd6d6aa-4f56-4a6a-a558-b227ba5ad7c2
+      connection: S3 with User
+      dataSetUrn: urn:dv:dataset:3a0494b4-86e9-430f-afcb-877a0d9bea95
     type: inputDelimited
 productState:
-  isDynamic: true
-  alias: Write_ice
+  persistDataFrame: false
+  catalogType: glue
+  enforceSchema: false
+  stepName: read
+  tableName: s3Source.weather_daily
+  warehousePath: s3://bp-spark-sql-library-test-acc/
+  catalogName: glue
+  type: readDataIceberg
+  isStateManagement: true
+  sequence: 3
+  alias: read
+  refreshInterval: None
   retentionVersions: ""
   logicalSchema:
     properties:
-      City: STRING
-      Region: STRING
-  stateStoreType: loadDataIceberg
+      Actual:
+        type: STRING
+        description: ""
+      Predicted:
+        type: STRING
+        description: ""
+  enforceSchemaMethod: ""
   isProfilingEnabled: false
-  updateStrategy: SCD1
-  tableName: iceberg_db.scd1_data
-  warehousePath: gs://dabur_poc_inutdata/iceberg_warehouse/
-  catalogName: random_catalog
-  optional:
-    persistDataFrame: false
-    enableDataReconciliation: false
-    enforceSchema: false
-    enforceSchemaMethod: Warning
-    catalogType: biglake
-    changeTrackingColumns:
-      - value
-    timestampColumn: modified2
-    primaryKey:
-      - id
-  refreshInterval: None
 transformation:
   - isDynamic: true
-    alias: Spark_SQL_1
-    description: str_to_date
+    alias: EMR_PySpark_1
+    description: Run pyspark code
     sequence: 2
+    arguments:
+      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteIceWithReg.py
     inputDataFrameList:
-      - inputDataFrame: gcp_read_csv_Mansi_1
-        tempViewName: temp
-    query: SELECT *,cast(modified AS date) as modified2 FROM temp;
+      - inputDataFrame: ""
+        tempViewName: ""
     optional:
-      persistDataFrame: false
-    type: operationThroughSqlQuery
+      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
+    type: customPySparkEMRServerless
 controlPort:
   dataQualityRules: {}
 outputPort:
