--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,13 +1,13 @@
-version: 0.0.1
+version: 0.0.2
 jobId: "398"
 jobName: Test_sample_data_state_mngt_Mansi
 jobType: Source Aligned Data Product
 domain: sale
-alias: read1
+alias: read
 discoveryPort:
   name: Test_sample_data_state_mngt_Mansi
 inputPorts:
-  - alias: daily_weather
+  - alias: weather_data_Mansi_1
     isDynamic: true
     path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
     optional:
@@ -16,8 +16,8 @@ inputPorts:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: S3 with User
-      dataSetUrn: urn:dv:dataset:3a0494b4-86e9-430f-afcb-877a0d9bea95
+      connection: Mansi_S3
+      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
     type: inputDelimited
 productState:
   persistDataFrame: false
@@ -50,7 +50,7 @@ transformation:
     sequence: 2
     arguments:
       - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteIceWithReg.py
+    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
     inputDataFrameList:
       - inputDataFrame: ""
         tempViewName: ""
