--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,15 +1,15 @@
-version: 0.0.5
-jobId: "398"
-jobName: Test_sample_data_state_mngt_Mansi
+version: 0.0.2
+jobId: "375"
+jobName: Test_read_csv_write_iceberg_AWS_Mansi
 jobType: Source Aligned Data Product
 domain: sale
-alias: read4
+alias: ice
 discoveryPort:
-  name: Test_sample_data_state_mngt_Mansi
+  name: Test_read_csv_write_iceberg_AWS_Mansi
 inputPorts:
-  - alias: weather_data_Mansi_1
+  - alias: Parquet_Mansi_s3_1
     isDynamic: true
-    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    path: s3://byte-etl-externaldemo/weather_data/
     optional:
       persistDataFrame: false
       advanceOptions:
@@ -17,46 +17,27 @@ inputPorts:
       enableDataReconciliation: false
       enforceSchema: false
       connection: Mansi_S3
-      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
+      dataSetUrn: urn:dv:dataset:b3deed73-c9c2-49ca-8323-ce16426fe4ba
     type: inputDelimited
 productState:
-  persistDataFrame: false
-  catalogType: glue
-  enforceSchema: false
-  stepName: read
-  tableName: select * from glue.s3Source.weather_daily
+  isDynamic: true
+  alias: ice
+  retentionVersions: ""
+  logicalSchema: ""
+  stateStoreType: loadDataIceberg
+  isProfilingEnabled: false
+  updateStrategy: Overwrite
+  tableName: s3source.demotable
   warehousePath: s3://bp-spark-sql-library-test-acc/
   catalogName: glue
-  type: readDataIceberg
-  isStateManagement: true
-  sequence: 3
-  alias: read
+  optional:
+    persistDataFrame: false
+    enableDataReconciliation: false
+    enforceSchema: true
+    enforceSchemaMethod: Warning
+    catalogType: glue
   refreshInterval: None
-  retentionVersions: ""
-  logicalSchema:
-    properties:
-      Actual:
-        type: STRING
-        description: ""
-      Predicted:
-        type: STRING
-        description: ""
-  enforceSchemaMethod: ""
-  isProfilingEnabled: false
-transformation:
-  - isDynamic: true
-    alias: EMR_PySpark_1
-    description: Run pyspark code
-    sequence: 2
-    arguments:
-      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
-    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
-    inputDataFrameList:
-      - inputDataFrame: ""
-        tempViewName: ""
-    optional:
-      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
-    type: customPySparkEMRServerless
+transformation: []
 controlPort:
   dataQualityRules: {}
 outputPort:
