--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,57 +1,62 @@
-version: 0.0.1
-jobId: "405"
-jobName: Test_iceberg_biglake_load_Mansi copy
+version: 0.0.6
+jobId: "398"
+jobName: Test_sample_data_state_mngt_Mansi
 jobType: Source Aligned Data Product
-domain: operation
-alias: write_iceberg1
+domain: sale
+alias: read
 discoveryPort:
-  name: Test_iceberg_biglake_load_Mansi copy
+  name: Test_sample_data_state_mngt_Mansi
 inputPorts:
-  - alias: gcp_read_csv_Mansi_1
+  - alias: weather_data_Mansi_1
     isDynamic: true
-    path: gs://dabur_poc_inutdata/scd1_testing_csv/incr_1.csv
+    path: s3://byte-etl-externaldemo/weather_data/20230626130122.csv
     optional:
       persistDataFrame: false
       advanceOptions:
         delimiter: ","
       enableDataReconciliation: false
       enforceSchema: false
-      connection: mansi_gcp_dummy
-      dataSetUrn: urn:dv:dataset:7dd6d6aa-4f56-4a6a-a558-b227ba5ad7c2
+      connection: Mansi_S3
+      dataSetUrn: urn:dv:dataset:7ea0f9b9-1b2b-4d8c-a3b6-2a68936e1ad9
     type: inputDelimited
 productState:
-  isDynamic: true
-  alias: write_iceberg
+  persistDataFrame: false
+  catalogType: glue
+  enforceSchema: false
+  stepName: read
+  tableName: select * from glue.s3Source.weather_daily
+  warehousePath: s3://bp-spark-sql-library-test-acc/
+  catalogName: glue
+  type: readDataIceberg
+  isStateManagement: true
+  sequence: 3
+  alias: read
+  refreshInterval: None
   retentionVersions: ""
   logicalSchema:
     properties:
-      City: STRING
-      Region: STRING
-  stateStoreType: loadDataIceberg
+      Actual:
+        type: STRING
+        description: ""
+      Predicted:
+        type: STRING
+        description: ""
+  enforceSchemaMethod: ""
   isProfilingEnabled: false
-  updateStrategy: Overwrite
-  tableName: iceberg_db.data_2_1
-  warehousePath: gs://dabur_poc_inutdata/iceberg_warehouse/
-  catalogName: random_catalog
-  optional:
-    persistDataFrame: false
-    enableDataReconciliation: false
-    enforceSchema: false
-    enforceSchemaMethod: Warning
-    catalogType: biglake
-  refreshInterval: None
 transformation:
   - isDynamic: true
-    alias: Spark_SQL_1
-    description: simple_select
+    alias: EMR_PySpark_1
+    description: Run pyspark code
     sequence: 2
+    arguments:
+      - s3://byte-etl-externaldemo/weather_data/20230626130122.csv
+    pythonFilePath: s3://bp-spark-sql-library-test-acc/custom-jobs/CustomPythonJobWriteParquetTimeOut.py
     inputDataFrameList:
-      - inputDataFrame: gcp_read_csv_Mansi_1
-        tempViewName: tmp
-    query: select * from tmp
+      - inputDataFrame: ""
+        tempViewName: ""
     optional:
-      persistDataFrame: false
-    type: operationThroughSqlQuery
+      pythonEnvTarGZPath: s3://byte-etl-externaldemo/pyspark_serverless_test/pyspark_venv.tar.gz
+    type: customPySparkEMRServerless
 controlPort:
   dataQualityRules: {}
 outputPort:
