--- a/data-product-manifest.yaml
+++ b/data-product-manifest.yaml
@@ -1,9 +1,9 @@
-version: 0.0.7
+version: 0.0.10
 jobId: "398"
 jobName: Test_sample_data_state_mngt_Mansi
 jobType: Source Aligned Data Product
 domain: sale
-alias: read3
+alias: read
 discoveryPort:
   name: Test_sample_data_state_mngt_Mansi
 inputPorts:
